hard-gists/265a43f255716c11cc62/run.log
=== Docker Run Log for 265a43f255716c11cc62 ===
Started at: Mi 29. Okt 13:11:17 CET 2025

[2025-10-29 13:11:18] START: Running container for 265a43f255716c11cc62
[2025-10-29 13:11:18] SUCCESS: Container fee2858c9f50674cc044a9fe75c11a790a04e9f996ad59462967af5830ab2c9d started for 265a43f255716c11cc62
=== Container logs for 265a43f255716c11cc62 ===
  File "/snippet.py", line 10
    print "Screen saver turned on"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 265a43f255716c11cc62 ===
[2025-10-29 13:11:20] INFO: Container fee2858c9f50674cc044a9fe75c11a790a04e9f996ad59462967af5830ab2c9d has stopped
